# gpsfreak

./: .gitignore  .gitmodules  99-freak.rules  Cargo.toml  LICENSE  Makefile  Parts.kicad_sym  README.md  breakout-mon.kicad_pcb  breakout-mon.kicad_pro  breakout-mon.kicad_sch  breakout.kicad_pcb  breakout.kicad_pro  breakout.kicad_sch  clocking.kicad_sch  cpu.kicad_sch  device.x  dfu.sh  end-in.kicad_pcb  end-in.kicad_pro  end-in.kicad_sch  end-out.kicad_pcb  end-out.kicad_pro  end-out.kicad_sch  filter_pos.py  fpga.kicad_sch  freak  gps.kicad_sch  gpsfreak.kicad_pcb  gpsfreak.kicad_pro  gpsfreak.kicad_sch  gpsref.kicad_pcb  gpsref.kicad_pro  gpsref.kicad_sch  main.kicad_sch  output-diff-sma.kicad_sch  output-opt-balun.kicad_sch  output-passive.kicad_sch  output-tlv3601.kicad_sch  output.kicad_sch  (+3 more)
.cargo/: config.toml
Parts.pretty/: .gitignore  C0704.kicad_mod  CAP_D13.5_H7.5_P5.0.step  CP_Radial_D13.5mm_P5.00mm.kicad_mod  HHS_0402.kicad_mod  LED-QPLB615-RGB.kicad_mod  LED_Hole.kicad_mod  LED_RGB_SIDE.kicad_mod  PinHeader_1x02_P2.54mm_Vertical.kicad_mod  PinHeader_1x06_P2.54mm_Vertical.kicad_mod  PinSocket_2x10_P2.54mm_Horizontal.kicad_mod  QBLP615_TRI.step  QFN-20-1EP_4x4mm_P0.5mm_EP2.7x2.7mm.kicad_mod  QFN-32-1EP_5x5mm_P0.5mm_EP3.45x3.45mm.kicad_mod  QFN-32-1EP_5x5mm_P0.5mm_EP3.5x3.5mm.kicad_mod  QFN-48-1EP_7x7mm_P0.5mm_EP5.1x5.1mm.kicad_mod  QFN-48-1EP_7x7mm_P0.5mm_EP5.45x5.45mm.kicad_mod  QFN10_TG5032CGN 40.0000M-CAGHNA0_EPS.kicad_mod  RTJ0020D.kicad_mod  SIL0008C_SMD_NV.kicad_mod  SIL0010D-MFG.kicad_mod  SMA_Amphenol_132289_EdgeMount.kicad_mod  SMA_EdgeMount.kicad_mod  SOT-23-5.kicad_mod  SOT-353_SC-70-5.kicad_mod  SOT-363_SC-70-6.kicad_mod  SOT-666-6.kicad_mod  SOU-242HNT_MIT.kicad_mod  Skedd6.kicad_mod  TestPoint.kicad_mod  U.FL_Hirose_U.FL-R-SMT-1_Vertical.kicad_mod  VQFN48_RGZ_TEX.kicad_mod  WSON-6-1EP_2x2mm_P0.65mm_NoEP.kicad_mod  XFMR_MABA-007159-000000.kicad_mod
analysis/: .gitignore  Cargo.toml
py/: dump-regs.py  freak.py  lmk05318b-registers.pickle  (+14 more)
(+72 files in other folders)
