cargo-features = ['different-binary-name']

[package]
name = 'gpsfreak'
version = '0.1.0'
edition = '2024'

[dependencies]
stm32h503 = {git = 'https://github.com/rcls/pac-stm32h503.git'}
stm_common = {path = './stm-common', features = ['cpu_stm32h503']}
konst = '*'

[target.'cfg(not(target_arch = "arm"))'.dependencies]
cortex-m = '*'

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = {version = '*', features = ['inline-asm']}

[[bin]]
name = 'freak'
filename = 'freak.elf'
path = 'src/freak.rs'

[profile.dev]
panic = 'abort'

[profile.release]
lto = true
codegen-units = 1
opt-level = 's'
debug = true
panic = 'abort'
strip = false
